--- a/crwn-clothing/src/index.scss
+++ b/crwn-clothing/src/index.scss
@@ -9,3 +9,14 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+
+  // home page 'Shop' link decoration
+  a {
+    text-decoration: none;
+    color: black;
+  } 
+
+  //* matches everything, so anything that we can match will be matched
+  * {
+    box-sizing: border-box;
+  }
